<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".InfoSandwich">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="43dp">

        <ImageView
            android:id="@+id/imgid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="05sp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="MissingConstraints,VectorDrawableCompat" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="05sp"
            android:background="@color/letras2"
            android:gravity="center"
            android:text="@string/titulo"
            android:textColor="@color/fondo"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="05sp"
            android:gravity="center_horizontal"
            android:text="@string/info"
            android:textColor="@color/letras"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/precioid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="05sp"
            android:gravity="center"
            android:text="@string/precio"
            android:textColor="@color/letras"
            android:textSize="50sp" />

        <Button
            android:id="@+id/comprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:background="@color/boton"
            android:text="@string/comprar"
            android:textColor="@color/letras"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>